Cm with partial I18N

--- a/src/main/webapp/VIEW/addCm.xhtml
+++ b/src/main/webapp/VIEW/addCm.xhtml
@@ -107,7 +107,7 @@
                                               var="enumCmdosu"
                                               allSuffix="getAll"/>
                                 <f:selectItems value="#{enumCmdosu.getAll}"
-                                               var="Cmindic"
+                                               var="Cmdosu"
                                                itemLabel="#{Cmdosu.getCmdosu()}"
                                                itemValue="#{Cmdosu}"/>
                             </p:selectOneMenu>
@@ -134,7 +134,7 @@
                                               var="enumCmroute"
                                               allSuffix="getAll"/>
                                 <f:selectItems value="#{enumCmroute.getAll}"
-                                               var="Cmindic"
+                                               var="Cmroute"
                                                itemLabel="#{Cmroute.getCmroute()}"
                                                itemValue="#{Cmroute}"/>
                             </p:selectOneMenu>
@@ -161,7 +161,7 @@
                                               var="enumCmfreq"
                                               allSuffix="getAll"/>
                                 <f:selectItems value="#{enumCmfreq.getAll}"
-                                               var="Cmindic"
+                                               var="Cmfreq"
                                                itemLabel="#{Cmfreq.getCmfreq()}"
                                                itemValue="#{Cmfreq}"/>
                             </p:selectOneMenu>
