MAJ 04/09 update DOV OK et list of events OK

--- a/src/main/webapp/VIEW/addTe.xhtml
+++ b/src/main/webapp/VIEW/addTe.xhtml
@@ -37,10 +37,10 @@
                                                   placeholder="#{I18N['tePage.visitNd.placeholder']}"/>
                             </h:panelGroup>
                         </h:panelGroup>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{teBean.messageErrorVisitNd}">
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{teBean.messageErrorVisitNdFalse}">
                             <div><span class="ui-message-error-icon"> </span>
                                 <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorVisitNd']}"/></span>
+                                        value="#{I18N['messageErrorVisitNdFalse']}"/></span>
                             </div>
                         </div>
                         <h:panelGroup rendered="#{teBean.te.teYn}">
