MAJ 05/09 update DOV OK et list of events OK

--- a/src/main/webapp/VIEW/addAe.xhtml
+++ b/src/main/webapp/VIEW/addAe.xhtml
@@ -24,10 +24,16 @@
                             <p:inputText id="input_aeterm" class="label" value="#{aeBean.ae.aeterm}"
                                          placeholder="#{I18N['aePage.aeterm.placeHolder']}"
                                          validatorMessage="#{I18N['aePage.aeterm.errorMessage']}">
-                                <p:ajax update="messageInputAeterm" event="blur"/>
+                                         <p:ajax event="blur" process="@this" update="@all" listener="#{aeBean.testAeterm()}"/>
                             </p:inputText>
                         </span>
-                        <p:message id="messageInputAeterm" for="@previous"/>
+
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorAeterm}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorAeterm']}"/></span>
+                            </div>
+                        </div>
 
                         <div class="field col-12 md:col-4">
                             <p:outputLabel for="input_aestdat" value="#{I18N['aePage.aestdat']}"/>
@@ -41,6 +47,7 @@
                                         value="#{I18N['messageErrorVisitDate']}"/></span>
                             </div>
                         </div>
+
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorVisitNdFalse}">
                             <div><span class="ui-message-error-icon"> </span>
                                 <span class="ui-message-error-detail"><h:outputText
@@ -61,37 +68,31 @@
                                                var="Aeout"
                                                itemLabel="#{Aeout.getAeout()}"
                                                itemValue="#{Aeout}"/>
+                                <p:ajax process="@this" update="@all"/>
                             </p:selectOneMenu>
                         </span>
+                        <h:panelGroup rendered="#{aeBean.ae.aeout == 'RECOVERED_RESOLVED' or aeBean.ae.aeout == 'RECOVERED_RESOLVED_WITH_SEQUELAE' or aeBean.ae.aeout == 'FATAL'}">
+                            <div class="field col-12 md:col-4">
+                                <p:outputLabel for="input_aeendat" value="#{I18N['aePage.aeendat']}"/>
+                                <p:datePicker id="input_aeendat" value="#{aeBean.ae.aeendat}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100">
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{aeBean.testDatetestDateAeout()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{aeBean.testAeendatBeforAestdat()}"/>
+                                </p:datePicker>
+                            </div>
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorVisitDateAeendat}">
+                                <div><span class="ui-message-error-icon"> </span>
+                                    <span class="ui-message-error-detail"><h:outputText
+                                            value="#{I18N['messageErrorVisitDateAeendat']}"/></span>
+                                </div>
+                            </div>
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorAeendatBeforAestdat}">
+                                <div><span class="ui-message-error-icon"> </span>
+                                    <span class="ui-message-error-detail"><h:outputText
+                                            value="#{I18N['messageErrorAeendatBeforAestdat']}"/></span>
+                                </div>
+                            </div>
+                        </h:panelGroup>
 
-                        <div class="field col-12 md:col-4">
-                            <p:outputLabel for="input_aeendat" value="#{I18N['aePage.aeendat']}"/>
-                            <p:datePicker id="input_aeendat" value="#{aeBean.ae.aeendat}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100"/>
-                        </div>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorVisitDate}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorVisitDate']}"/></span>
-                            </div>
-                        </div>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorAeendatBeforAestdat}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorAeendatBeforAestdat']}"/></span>
-                            </div>
-                        </div>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorAeendatPres}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorAeendatPres']}"/></span>
-                            </div>
-                        </div>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorAeendatMis}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorAeendatMis']}"/></span>
-                            </div>
-                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_aetoxgd" value="#{I18N['aePage.aetoxgd']}"/>
                             <p:selectOneMenu id="input_aetoxgd"
@@ -136,7 +137,7 @@
                                 <p:importEnum type="com.sym022.sym022.enums.Aerel"
                                               var="enumAerel"
                                               allSuffix="getAll"/>
-                                <f:selectItems value="#{enumAesev.getAll}"
+                                <f:selectItems value="#{enumAerel.getAll}"
                                                var="Aerel"
                                                itemLabel="#{Aerel.getAerel()}"
                                                itemValue="#{Aerel}"/>
@@ -201,6 +202,7 @@
                                 <p:inputText id="input_aeothersp" class="label" value="#{aeBean.ae.aeothersp}"
                                          placeholder="#{I18N['aePage.aeothersp.placeHolder']}"
                                          validatorMessage="#{I18N['aePage.aeothersp.errorMessage']}">
+                                <p:ajax event="blur" process="@this" update="@all" listener="#{aeBean.testAeotherspMis()}"/>
                                 </p:inputText>
                             </span>
 
@@ -223,6 +225,12 @@
                                 <p:ajax process="@this" update="@all"/>
                             </p:selectOneButton>
                         </span>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorAaeser}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorAaeser']}"/></span>
+                            </div>
+                        </div>
 
                         <h:panelGroup rendered="#{aeBean.ae.aeser}">
                             <span class="field col-12 md:col-4 p-20-0">
@@ -300,12 +308,10 @@
                             <span class="field col-12 md:col-4 p-20-0">
                                 <p:outputLabel for="input_aemedimsp" value="#{I18N['aePage.aemedimsp']}"/>
                                 <p:inputText id="input_aemedimsp" class="label" value="#{aeBean.ae.aemedimsp}"
-                                             placeholder="#{I18N['aePage.aemedimsp.placeHolder']}"
-                                             validatorMessage="#{I18N['aePage.aemedimsp.errorMessage']}">
-                                    <p:ajax update="messageInputmedimsp" event="blur"/>
+                                             placeholder="#{I18N['aePage.aemedimsp.placeHolder']}">
+                                    <p:ajax event="blur" process="@this" update="@all" listener="#{aeBean.testAemedimspMis()}"/>
                                 </p:inputText>
                             </span>
-                            <p:message id="messageInputmedimsp" for="@previous"/>
                             <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorAemedimspMis}">
                                 <div><span class="ui-message-error-icon"> </span>
                                     <span class="ui-message-error-detail"><h:outputText
