--- a/src/main/webapp/VIEW/updateDov.xhtml
+++ b/src/main/webapp/VIEW/updateDov.xhtml
@@ -78,7 +78,7 @@
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'SITE' and dovBean.dov.eventByIdEvent.available}">
-                            <p:commandButton value="#{I18N['application.create.dov']}"
+                            <p:commandButton value="#{I18N['application.update.dov']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
