--- a/src/main/webapp/VIEW/addCm.xhtml
+++ b/src/main/webapp/VIEW/addCm.xhtml
@@ -25,24 +25,29 @@
                                          placeholder="#{I18N['cmPage.cmterm.placeHolder']}"
                                          validatorMessage="#{I18N['cmPage.cmterm.errorMessage']}">
                                 <p:ajax update="messageInputCmterm" event="blur"/>
+                                <p:ajax event="blur" process="@this" update="@all" listener="#{cmBean.testCmterm()}"/>
                             </p:inputText>
                         </span>
                         <p:message id="messageInputCmterm" for="@previous"/>
-
-                        <span class="field col-12 md:col-4 p-20-0">
-                            <p:outputLabel for="input_cmtermc" value="#{I18N['cmPage.cmtermc']}"/>
-                            <p:inputText id="input_cmtermc" class="label" value="#{cmBean.cm.cmtermc}"
-                                         placeholder="#{I18N['cmPage.cmtermc.placeHolder']}">
-                                <p:ajax update="messageInputCmtermc" event="blur"/>
-                            </p:inputText>
-                        </span>
-                        <p:message id="messageInputCmtermc" for="@previous"/>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{cmBean.messageErrorVisitNdFalse}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorVisitNdFalse']}"/></span>
+                            </div>
+                        </div>
 
                         <div class="field col-12 md:col-4">
                             <p:outputLabel for="input_cmstdat" value="#{I18N['cmPage.cmstdat']}"/>
-                            <p:datePicker id="input_cmstdat" value="#{cmBean.cm.cmstdat}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100"/>
+                            <p:datePicker id="input_cmstdat" value="#{cmBean.cm.cmstdat}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100">
+                                <p:ajax event="change" process="@this" update="@all" listener="#{cmBean.testDate()}"/>
+                            </p:datePicker>
                         </div>
-
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{cmBean.messageErrorVisitDate}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorVisitDate']}"/></span>
+                            </div>
+                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmong" value="#{I18N['cmPage.cmong']}"/>
                             <p:selectOneButton   id="input_cmong"
@@ -54,12 +59,27 @@
                                 <p:ajax process="@this" update="@all"/>
                             </p:selectOneButton>
                         </span>
-
-                        <div class="field col-12 md:col-4">
-                            <p:outputLabel for="input_cmendat" value="#{I18N['cmPage.cmendat']}"/>
-                            <p:datePicker id="input_cmendat" value="#{cmBean.cm.cmendat}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100"/>
-                        </div>
-
+                        <h:panelGroup rendered="#{!cmBean.cm.cmong}">
+                            <div class="field col-12 md:col-4">
+                                <p:outputLabel for="input_cmendat" value="#{I18N['cmPage.cmendat']}"/>
+                                <p:datePicker id="input_cmendat" value="#{cmBean.cm.cmendat}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100">
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{cmBean.testDateCmendat()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{cmBean.testCmendatBeforcmstdat()}"/>
+                                </p:datePicker>
+                            </div>
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorCmendat}">
+                                <div><span class="ui-message-error-icon"> </span>
+                                    <span class="ui-message-error-detail"><h:outputText
+                                            value="#{I18N['messageErrorCmendat']}"/></span>
+                                </div>
+                            </div>
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorCmendatBeforcmstdat}">
+                                <div><span class="ui-message-error-icon"> </span>
+                                    <span class="ui-message-error-detail"><h:outputText
+                                            value="#{I18N['messageErrorCmendatBeforcmstdat']}"/></span>
+                                </div>
+                            </div>
+                        </h:panelGroup>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmindic" value="#{I18N['cmPage.cmindic']}"/>
                             <p:selectOneMenu id="input_cmindic"
@@ -74,10 +94,11 @@
                                                var="Cmindic"
                                                itemLabel="#{Cmindic.getCmindic()}"
                                                itemValue="#{Cmindic}"/>
+                                <p:ajax process="@this" update="@all"/>
                             </p:selectOneMenu>
                         </span>
-
-                        <span class="field col-12 md:col-4 p-20-0">
+                        <h:panelGroup rendered="#{cmBean.cm.cmindic == 'OTHER'}">
+                            <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmindicsp" value="#{I18N['cmPage.cmindicsp']}"/>
                             <p:inputText id="input_cmindicsp" class="label" value="#{cmBean.cm.cmindicsp}"
                                          placeholder="#{I18N['cmPage.cmindicsp.placeHolder']}"
@@ -85,17 +106,16 @@
                                 <p:ajax update="messageInputCmindicsp" event="blur"/>
                             </p:inputText>
                         </span>
-                        <p:message id="messageInputCmindicsp" for="@previous"/>
-
+                            <p:message id="messageInputCmindicsp" for="@previous"/>
+                        </h:panelGroup>
                         <span class="field col-12 md:col-4">
                                     <p:outputLabel for="input_cmdose" value="#{I18N['cmPage.input_cmdose']}"/>
                                     <p:inputNumber id="input_cmdose" class="label" value="#{cmBean.cm.cmdose}"
                                                    placeholder="#{I18N['cmPage.input_cmdose.placeholder']}"
                                                    validatorMessage="#{I18N['cmPage.input_cmdose.errorMessage']}">
+                                                   <p:ajax event="change" process="@this" update="@all" listener="#{cmBean.testCmdoseAndCmdosu()}"/>
                                     </p:inputNumber>
-                                </span>
-                        <p:message id="messagecmdose" for="@previous"/>
-
+                        </span>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmdosu" value="#{I18N['cmPage.cmdosu']}"/>
                             <p:selectOneMenu id="input_cmdosu"
@@ -110,10 +130,18 @@
                                                var="Cmdosu"
                                                itemLabel="#{Cmdosu.getCmdosu()}"
                                                itemValue="#{Cmdosu}"/>
+                                <p:ajax process="@this" update="@all"/>
+                                <p:ajax event="blur" process="@this" update="@all" listener="#{cmBean.testCmdoseAndCmdosu()}"/>
                             </p:selectOneMenu>
                         </span>
-
-                        <span class="field col-12 md:col-4 p-20-0">
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{aeBean.messageErrorCmdoseAndCmdosu}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorCmdoseAndCmdosu']}"/></span>
+                            </div>
+                        </div>
+                        <h:panelGroup rendered="#{cmBean.cm.cmdosu == 'OTHER'}">
+                            <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmdosusp" value="#{I18N['cmPage.cmdosusp']}"/>
                             <p:inputText id="input_cmdosusp" class="label" value="#{cmBean.cm.cmdosusp}"
                                          placeholder="#{I18N['cmPage.cmdosusp.placeHolder']}"
@@ -121,8 +149,8 @@
                                 <p:ajax update="messageInputCmdosusp" event="blur"/>
                             </p:inputText>
                         </span>
-                        <p:message id="messageInputCmdosusp" for="@previous"/>
-
+                            <p:message id="messageInputCmdosusp" for="@previous"/>
+                        </h:panelGroup>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmroute" value="#{I18N['cmPage.cmroute']}"/>
                             <p:selectOneMenu id="input_cmroute"
@@ -137,10 +165,11 @@
                                                var="Cmroute"
                                                itemLabel="#{Cmroute.getCmroute()}"
                                                itemValue="#{Cmroute}"/>
+                            <p:ajax process="@this" update="@all"/>
                             </p:selectOneMenu>
                         </span>
-
-                        <span class="field col-12 md:col-4 p-20-0">
+                        <h:panelGroup rendered="#{cmBean.cm.cmroute == 'OTHER'}">
+                            <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmroutesp" value="#{I18N['cmPage.cmroutesp']}"/>
                             <p:inputText id="input_cmroutesp" class="label" value="#{cmBean.cm.cmroutesp}"
                                          placeholder="#{I18N['cmPage.cmroutesp.placeHolder']}"
@@ -148,8 +177,8 @@
                                 <p:ajax update="messageInputCmroutesp" event="blur"/>
                             </p:inputText>
                         </span>
-                        <p:message id="messageInputCmroutesp" for="@previous"/>
-
+                            <p:message id="messageInputCmroutesp" for="@previous"/>
+                        </h:panelGroup>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmfreq" value="#{I18N['cmPage.cmfreq']}"/>
                             <p:selectOneMenu id="input_cmfreq"
@@ -164,10 +193,11 @@
                                                var="Cmfreq"
                                                itemLabel="#{Cmfreq.getCmfreq()}"
                                                itemValue="#{Cmfreq}"/>
+                            <p:ajax process="@this" update="@all"/>
                             </p:selectOneMenu>
                         </span>
-
-                        <span class="field col-12 md:col-4 p-20-0">
+                        <h:panelGroup rendered="#{cmBean.cm.cmfreq == 'OTHER'}">
+                            <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_cmfreqsp" value="#{I18N['cmPage.cmfreqsp']}"/>
                             <p:inputText id="input_cmfreqsp" class="label" value="#{cmBean.cm.cmfreqsp}"
                                          placeholder="#{I18N['cmPage.cmfreqsp.placeHolder']}"
@@ -175,8 +205,8 @@
                                 <p:ajax update="messageInputCmfreqsp" event="blur"/>
                             </p:inputText>
                         </span>
-                        <p:message id="messageInputCmfreqsp" for="@previous"/>
-
+                            <p:message id="messageInputCmfreqsp" for="@previous"/>
+                        </h:panelGroup>
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:commandButton value="#{I18N['cmPage.addCmTitle']}"
